feat: 당첨 번호가 6개 보너스 번호가 1개의 숫자인지 검증하는 기능 추가