@@ -1,11 +1,12 @@
 package lotto.bo;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class WinningNumber {
+    static final int LOTTO_NUMBER_SIZE = 6;
+    static final int BONUS_NUMBER_SIZE = 1;
     private final List<Integer> numbers;
 
     public WinningNumber(String winningLottoNumbers, String BonusNumber) {
@@ -13,11 +14,15 @@ public class WinningNumber {
         validateInteger(BonusNumber);
 
         List<Integer> tmpNumbers = convertStrToNumberList(winningLottoNumbers);
-        tmpNumbers.add(Integer.valueOf(BonusNumber));
+        int tmpBonusNumber = Integer.parseInt(BonusNumber);
 
         validateRange(tmpNumbers);
-        validateRange(tmpNumbers);
-        this.numbers = Collections.emptyList();
+        validateRange(List.of(tmpBonusNumber));
+        validateNumberSize(tmpNumbers, LOTTO_NUMBER_SIZE);
+        validateNumberSize(List.of(tmpBonusNumber), BONUS_NUMBER_SIZE);
+
+        tmpNumbers.add(tmpBonusNumber);
+        this.numbers = tmpNumbers;
     }
 
     private List<Integer> convertStrToNumberList(String numbers) {
@@ -42,6 +47,12 @@ public class WinningNumber {
             if (number < 1 || number > 45) {
                 throw new IllegalArgumentException("당첨 번호와 보너스 번호는 1~ 45 사이의 숫자이어야합니다.");
             }
+        }
+    }
+
+    private void validateNumberSize(List<Integer> numbers, int size) {
+        if (numbers.size() != size) {
+            throw new IllegalArgumentException("당첨 번호는 6자리, 보너스 번호는 1자리 숫자가 아닙니다.");
         }
     }
 }
